-Modified CORS for https tunneling -Places that have a primary type not related to food are now not saved in the db -Modified search requests to allow max radius of 10km